--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
   </div>
   <div id="prediction-box">
     <p id="prediction">Prediction: <span id="prediction-text">N/A</span></p>
-    <p id="Text Present">Prediction: <span id="prediction-text2">N/A</span></p>
+    <p id="Text Present">Text Present <span id="prediction-text2">N/A</span></p>
   </div>
   <button id="switch-camera">Switch Camera</button>
   <button id="take-picture">Take Picture</button>
